Align fix for mobile screen

--- a/src/App.scss
+++ b/src/App.scss
@@ -61,7 +61,7 @@ $input-shadow: none;
   flex-direction: column;
   align-items: top;
   overflow-y: scroll;
-  margin: 20px 0px;
+  margin: 85px 0px;
   border: 1px dashed blueviolet;
 
   .list-button {
