--- a/src/components/TheHeader.scss
+++ b/src/components/TheHeader.scss
@@ -1,4 +1,8 @@
 nav {
+  .navbar-brand {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
   .title {
   color: white !important;
 }
